# RayTracer_Features

./: CMakeLists.txt  README.md
examples/Chapter2 - projectile/: projectile.cpp
examples/Chapter3 - matrix clock/: clock.cpp
examples/Chapter4 - RaySphere Intersection/: raysphereIntersection.cpp
examples/Chapter5 - shading/: shading.cpp
examples/Chapter6 - scene/: scene.cpp
examples/Chapter7 - shadows/: shadows.cpp
examples/Chapter8 - Plane/: plane.cpp
examples/Chapter9 - patterns/: patterns.cpp
rtmlib/: CMakeLists.txt
rtmlib/include/: rtmlib.h
rtmlib/include/canvas/: canvas.h
rtmlib/include/computations/: computation.h  prepare_computations.h
rtmlib/include/geometry/: geo_test.h  intersection.h  intersections.h  ray.h  ray_intersection.h  ray_transform.h
rtmlib/include/lighting/: light.h  pointLight.h
rtmlib/include/mat_constants/: math_constants.h
rtmlib/include/mat_entities/: color.h  matrix.h  matrix_utility.h  point.h  tuple.h  tuple_utility.h  vector.h  vector_utility.h
rtmlib/include/materials/: material.h
rtmlib/include/parser/: parser.h
rtmlib/include/patterns/: checkerPattern.h  gradientPattern.h  pattern.h  pattern_functions.h  ringPattern.h  solidPattern.h  stripePattern.h
rtmlib/include/primitives/: box.h  cone.h  cube.h  cylinder.h  group.h  plane.h  shape.h  smoothTriangle.h  sphere.h  surface.h  triangle.h  triangleMesh.h
rtmlib/include/transforms/: transforms.h
rtmlib/include/util/: utils.h
rtmlib/include/worldScene/: camera.h  scene.h  world.h
rtmlib/src/: box.cpp  camera.cpp  canvas.cpp  checkerPattern.cpp  color.cpp  cone.cpp  cylinder.cpp  geo_test.cpp  gradientPattern.cpp  group.cpp  intersection.cpp  light.cpp  material.cpp  matrix.cpp  matrix_utility.cpp  parser.cpp  pattern.cpp  pattern_function.cpp  picture.ppm  plane.cpp  point.cpp  pointLight.cpp  prepare_computations.cpp  ray.cpp  ray_intersection.cpp  ray_transform.cpp  ringPattern.cpp  scene.cpp  smoothTriangle.cpp  solidPattern.cpp  sphere.cpp  stripePattern.cpp  surface.cpp  transforms.cpp  triangle.cpp  triangleMesh.cpp  tuple.cpp  tuple_utility.cpp  utils.cpp  vector.cpp  (+1 more)
